--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <h3>Score: <span id='score'>0</span></h3>
   <button id='startBtn'>Start / Pause</button>
 
+
+<div class="container">
   <div class="grid">
     <div></div>
     <div></div>
@@ -224,9 +226,27 @@
     <div class='taken'></div>
     <div class='taken'></div>
     <div class='taken'></div>
-
   </div>
 
+  <div class="mini-grid">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
 
 </body>
 </html>
