--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 <body>
 
-  <h3>Score: <span id='score'>0</span></h3>
-  <button id='startBtn'>Start / Pause</button>
+<div class="header">
+  <p>Score: <span id='score'>0</span></p>
 
+  <div class="buttons">
+    <button id='startBtn'>Start / Pause</button>
+    <select name="Level" id="level">
+      <option value="level1"> Level 1</option>
+      <option value="level2"> Level 2</option>
+      <option value="level3"> Level 3</option>
+    </select>
+  </div>
+</div>
 
 <div class="container">
   <div class="grid">
