added level button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <div class="buttons">
     <button id='startBtn'>Start / Pause</button>
     <select name="Level" id="level">
-      <option value="level1"> Level 1</option>
-      <option value="level2"> Level 2</option>
-      <option value="level3"> Level 3</option>
+      <option value="1000"> Level 1</option>
+      <option value="500"> Level 2</option>
+      <option value="200"> Level 3</option>
     </select>
   </div>
 </div>
